--- a/package.json
+++ b/package.json
@@ -3,9 +3,33 @@
   "version": "1.0.0",
   "description": "Site from scratch",
   "main": "index.js",
+  "git repository": "https://github.com/rob0514/floema",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "development": "webpack serve --progress --config webpack.dev.config.js",
+    "start": "npm run development",
+    "build": "webpack --progress --config webpack.prod.config.js"
   },
   "author": "Rob Davis",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "babel-loader": "^9.1.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.2",
+    "file-loader": "^6.2.0",
+    "image-minimizer-webpack-plugin": "^3.8.1",
+    "imagemin": "^8.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "mini-css-extract-plugin": "^2.7.1",
+    "postcss-loader": "^7.0.2",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
+    "svgo": "^3.0.2",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
+  }
 }
