--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "svgo": "^3.0.2",
+    "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1",
