--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "git repository": "https://github.com/rob0514/floema",
   "scripts": {
-    "development": "webpack serve --progress --config webpack.dev.config.js",
-    "start": "npm run development",
-    "build": "webpack --progress --config webpack.prod.config.js"
+    "backend:build": "node app.js",
+    "backend:dev": "nodemon app.js",
+    "frontend:dev": "webpack serve --progress --config webpack.dev.config.js",
+    "start": "npm run backend:dev && npm run frontend:dev",
+    "frontend:build": "webpack --progress --config webpack.prod.config.js"
   },
   "author": "Rob Davis",
   "license": "ISC",
@@ -32,5 +34,10 @@
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
+    "pug": "^3.0.2"
   }
 }
